Fix margin and spacing in about html

--- a/about.css
+++ b/about.css
@@ -5,6 +5,12 @@
   box-sizing: 0;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -125,20 +131,6 @@ a {
   padding-top: 3rem;
 }
 
-.welcome-text > h1 {
-  font-size: 120px;
-  font-weight: 800;
-  padding-left: 3rem;
-  padding-right: 2rem;
-  padding-top: 1rem;
-  text-transform: uppercase;
-  color: rgb(239, 6, 6);
-  background-image: url('https://cdn.aarp.net/content/dam/aarp/entertainment/books/2021/12/1140-flying-books-illustration.jpg');
-  background-size: cover;
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
 .about-welcome-text > p {
   font-family: Lato, sans-serif;
   font-size: 30px;
@@ -152,7 +144,7 @@ a {
 
 .about-welcome-text > h1 {
   font-family: cocogoose, sans-serif;
-  font-size: 10vw;
+  font-size: 80px;
   font-weight: 600;
   padding-left: 3rem;
   padding-right: 2rem;
@@ -166,7 +158,7 @@ a {
   text-align: justify;
   border: 1px solid rgb(242, 242, 246);
   background-color: rgb(255, 255, 255);
-  margin: 1rem;
+  margin: 2rem;
   padding: 1rem;
 }
 
@@ -413,6 +405,8 @@ footer > div > p:last-child {
   .nav-bar {
     display: flex;
     flex-direction: column;
+    box-shadow: rgb(0 0 0 / 30%) 0px 2px 8px 0px;
+    height: 0%;
   }
 
   .top-nav {
@@ -453,7 +447,6 @@ footer > div > p:last-child {
   .bottom-nav {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    padding-top: 1em;
     background-color: #fff;
     width: 100%;
   }
@@ -487,8 +480,26 @@ footer > div > p:last-child {
     width: 100px;
   }
 
+  .landingpage-wrap {
+    background-image: url('./src/main_big.png');
+    background-repeat: repeat-x;
+    background-position: left top;
+    background-size: cover;
+    height:100%;
+    padding-top: 10rem;
+}
+ .landingpage-wrap > div >div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+ }
   .about-welcome-text > p {
     display: none;
+  }
+
+  .event-messege{
+    width: 70%;
+    margin: auto;
   }
 
   .past-slams > div:last-child {
